--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,25 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Business-Tax-Canada
-version:      0.03
-version_from: lib/Business/Tax/Canada.pm
-installdirs:  site
-requires:
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+---
+abstract: 'Calculates Canadian GST/PST/HST'
+author:
+  - 'Steve Simms <steve@deefs.net>'
+build_requires: {}
+configure_requires:
+  Module::Build: 0.40
+dynamic_config: 1
+generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Business-Tax-Canada
+provides:
+  Business::Tax::Canada:
+    file: lib/Business/Tax/Canada.pm
+    version: 0.04
+  Business::Tax::Canada::Price:
+    file: lib/Business/Tax/Canada.pm
+    version: 0
+resources:
+  license: http://dev.perl.org/licenses/
+  repository: https://bitbucket.org/ssimms/business-tax-canada
+version: 0.04
